copyparty/web/browser.css
:root {
	--grid-sz: 10em;
}
* {
	line-height: 1.2em;
}
html,body,tr,th,td,#files,a {
	color: inherit;
	background: none;
	font-weight: inherit;
	font-size: inherit;
	padding: 0;
	border: none;
}
html {
	color: #ccc;
	background: #333;
	font-family: sans-serif;
	text-shadow: 1px 1px 0px #000;
}
html, body {
	margin: 0;
	padding: 0;
}
body {
	padding-bottom: 5em;
}
#path,
#path * {
	font-size: 1em;
}
#path {
	color: #aca;
	text-shadow: 1px 1px 0 #000;
	font-variant: small-caps;
	font-weight: normal;
	background: #4c4c4c;
	display: inline-block;
	padding: .35em .5em .2em .5em;
	border-radius: 0 .3em .3em 0;
	box-shadow: .1em .1em .4em #222;
	margin: 1.3em 0 0 0;
	font-size: 1.4em;
}
#path #entree {
	margin-left: -.7em;
}
#files {
	border-spacing: 0;
	z-index: 1;
	position: relative;
}
#files tbody a {
	display: block;
	padding: .3em 0;
}
#files tbody div a {
	color: #f5a;
}
a, #files tbody div a:last-child {
	color: #fc5;
	padding: .2em;
	text-decoration: none;
}
#files a:hover {
	color: #fff;
	background: #161616;
	text-decoration: underline;
}
#files thead {
	background: #333;
	position: sticky;
	top: 0;
}
#files thead a {
	color: #999;
	font-weight: normal;
}
#files tr:hover {
	background: #1c1c1c;
}
#files thead th {
	padding: .5em 1.3em .3em 1.3em;
	cursor: pointer;
}
#files thead th:last-child {
	background: #444;
	border-radius: .7em .7em 0 0;
}
#files thead th:first-child {
	background: #222;
}
#files tbody,
#files thead th:nth-child(2) {
	background: #222;
	border-radius: 0 .7em 0 0;
}
#files td {
	margin: 0;
	padding: 0 .5em;
	border-bottom: 1px solid #111;
}
#files td+td+td {
	max-width: 30em;
	overflow: hidden;
}
#files tr+tr td {
	border-top: 1px solid #383838;
}
#files tbody td:nth-child(3) {
	font-family: monospace;
	font-size: 1.3em;
	text-align: right;
	padding-right: 1em;
	white-space: nowrap;
}
#files tbody td:first-child {
	padding-left: 1.5em;
	color: #888;
}
#files tbody tr:first-child td {
	padding-top: .9em;
}
#files tbody tr:last-child td {
	padding-bottom: 1.3em;
	border-bottom: .5em solid #444;
}
#files tbody tr td:last-child {
	white-space: nowrap;
}
#files thead th[style] {
	width: auto !important;
}
#path a {
	margin: 0 0 0 -.2em;
	padding: 0 0 0 .4em;
	/* ie: */
	border-bottom: .1em solid #777\9;
	margin-right: 1em\9;
}
#path a:first-child {
	padding-left: .8em;
}
#path a:not(:last-child):after {
	content: '';
	width: 1.05em;
	height: 1.05em;
	margin: -.2em .3em -.2em -.4em;
	display: inline-block;
	border: 1px solid rgba(255,224,192,0.3);
	border-width: .05em .05em 0 0;
	transform: rotate(45deg);
	background: linear-gradient(45deg, rgba(0,0,0,0) 40%, rgba(0,0,0,0.25) 75%, rgba(0,0,0,0.35));
}
#path a:hover {
	color: #fff;
	background: linear-gradient(90deg, rgba(0,0,0,0), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
.logue {
	padding: .2em 1.5em;
}
.logue:empty {
	display: none;
}
#pro.logue {
	margin-bottom: .8em;
}
#epi.logue {
	margin: .8em 0;
}
#srv_info {
	opacity: .5;
	font-size: .8em;
	color: #fc5;
	position: absolute;
	top: .5em;
	left: 2em;
}
#srv_info span {
	color: #fff;
}
#files tbody a.play {
	color: #e70;
	padding: .2em;
	margin: -.2em;
}
#files tbody a.play.act {
	color: #840;
	text-shadow: 0 0 .3em #b80;
}
#files tbody tr.sel td,
#ggrid a.sel,
html.light #ggrid a.sel {
	color: #fff;
	background: #925;
	border-color: #c37;
}
#files tbody tr.sel:hover td,
#ggrid a.sel:hover,
html.light #ggrid a.sel:hover {
	color: #fff;
	background: #d39;
	border-color: #d48;
	text-shadow: 1px 1px 0 #804;
}
#ggrid a.sel,
html.light #ggrid a.sel {
	border-top: 1px solid #d48;
	box-shadow: 0 .1em 1.2em #b36;
	transition: all 0.2s cubic-bezier(.2, 2.2, .5, 1); /* https://cubic-bezier.com/#.4,2,.7,1 */
}
#ggrid a.sel img {
	opacity: .7;
	box-shadow: 0 0 1em #b36;
	filter: contrast(130%) brightness(107%);
}
#files tr.sel a {
	color: #fff;
}
#files tr.sel a.play {
	color: #fc5;
}
#files tr.sel a.play.act {
	color: #fff;
	text-shadow: 0 0 1px #fff;
}
#blocked {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: #333;
	font-size: 2.5em;
	z-index: 99;
}
#blk_play,
#blk_abrt {
	position: fixed;
	display: table;
	width: 80%;
}
#blk_play {
	height: 60%;
	left: 10%;
	top: 5%;
}
#blk_abrt {
	height: 25%;
	left: 10%;
	bottom: 5%;
}
#blk_play a,
#blk_abrt a {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	background: #444;
	border-radius: 2em;
}
#widget {
	position: fixed;
	font-size: 1.5em;
	left: 0;
	right: 0;
	bottom: -6em;
	height: 6em;
	width: 100%;
	z-index: 3;
	transition: bottom 0.15s;
}
#widget.open {
	box-shadow: 0 0 1em rgba(0,48,64,0.2);
	bottom: 0;
}
#widgeti {
	position: relative;
	z-index: 10;
	width: 100%;
	height: 100%;
	background: #3c3c3c;
}
#wtico {
	cursor: url(/.cpr/dd/4.png), pointer;
	animation: cursor 500ms;
}
#wtico:hover {
	animation: cursor 500ms infinite;
}
@keyframes cursor {
	 0% {cursor: url(/.cpr/dd/2.png), pointer}
	30% {cursor: url(/.cpr/dd/3.png), pointer}
	50% {cursor: url(/.cpr/dd/4.png), pointer}
	75% {cursor: url(/.cpr/dd/5.png), pointer}
	85% {cursor: url(/.cpr/dd/4.png), pointer}
}
@keyframes spin {
	100% {transform: rotate(360deg)}
}
#wtoggle {
	position: absolute;
	top: -1.2em;
	right: 0;
	width: 1.2em;
	height: 1em;
	font-size: 2em;
	line-height: 1em;
	text-align: center;
	text-shadow: none;
	background: #3c3c3c;
	box-shadow: 0 0 .5em #222;
	border-radius: .3em 0 0 0;
	padding: .2em 0 0 .07em;
	color: #fff;
}
#wzip, #wnp {
	display: none;
	margin-right: .3em;
	padding-right: .3em;
	border-right: .1em solid #555;
}
#wnp a {
	position: relative;
	font-size: .47em;
	margin: 0 .1em;
	top: -.4em;
}
#wnp a+a {
	margin-left: .33em;
}
#wtoggle,
#wtoggle * {
	line-height: 1em;
}
#wtoggle.np {
	width: 5.5em;
}
#wtoggle.sel {
	width: 6.4em;
}
#wtoggle.sel #wzip,
#wtoggle.np #wnp {
	display: inline-block;
}
#wtoggle.sel.np #wnp {
	display: none;
}
#wzip a {
	font-size: .4em;
	padding: 0 .3em;
	margin: -.3em .2em;
	position: relative;
	display: inline-block;
}
#wzip a+a {
	margin-left: .8em;
}
/* ... */

